--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'io.reactivex:rxandroid:0.24.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 
 }
